--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <img src="excelent.jpg" alt="excellent" />
     <img src="fine.jpg" alt="This is fine" />
     <img src="fu.jpg" alt="FU cat" />
+    <img src="c.jpg" alt="I'ts complicated" />
     <img src="nope.jpg" alt="nopezilla" />
     <img src="cookie.jpg" alt="cookie" />
     <img src="what.jpg" alt="What have I read" />
