--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@
     <img src="nope.jpg" alt="nopezilla" />
     <img src="cookie.jpg" alt="cookie" />
     <img src="what.jpg" alt="What have I read" />
+    <img src="nowkiss.jpg" alt="now kiss" />
+    <img src="lemon.jpg" alt="now kiss" />
   </body>
 </html>
