--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
   <body>
     <img src="noidea.jpg" alt="noidea" />
     <img src="excelent.jpg" alt="excellent" />
+    <img src="nowkiss.jpg" alt="now kiss" />
     <img src="fine.jpg" alt="This is fine" />
     <img src="fu.jpg" alt="FU cat" />
     <img src="c.jpg" alt="I'ts complicated" />
     <img src="nope.jpg" alt="nopezilla" />
     <img src="cookie.jpg" alt="cookie" />
     <img src="what.jpg" alt="What have I read" />
-    <img src="nowkiss.jpg" alt="now kiss" />
     <img src="lemon.jpg" alt="now kiss" />
+    <img src="facepalm.jpg" alt="facepalm" />
   </body>
 </html>
