--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
     <img src="what.jpg" alt="What have I read" />
     <img src="lemon.jpg" alt="now kiss" />
     <img src="facepalm.jpg" alt="facepalm" />
+    <img src="wot.jpg" alt="wooot" />
   </body>
 </html>
