--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
     <img src="what.jpg" alt="What have I read" />
     <img src="lemon.jpg" alt="now kiss" />
     <img src="facepalm.jpg" alt="facepalm" />
+    <img src="unit-test.jpg" alt="unit test" />
+    <img src="cow-lick.jpg" alt="cow lick" />
+    <img src="d.jpg" alt="Dangerouse dog" />
     <img src="wot.png" alt="wooot" />
+    <img src="merge.git" alt="git merge" />
+    <img src="take-my-money.gif" alt="Shut up and take my money" />
+    <img src="told-ya.gif" alt="Told ya frozen" />
+    <img src="rm.gif" alt="sudo rm" />
   </body>
 </html>
