--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <img src="what.jpg" alt="What have I read" />
     <img src="lemon.jpg" alt="now kiss" />
     <img src="facepalm.jpg" alt="facepalm" />
+    <img src="satisfaction.jpg" alt="satisfaction" />
     <img src="unit-test.jpg" alt="unit test" />
     <img src="cow-lick.jpg" alt="cow lick" />
     <img src="d.jpg" alt="Dangerouse dog" />
