--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <img src="noidea.jpg" alt="noidea" />
     <img src="excelent.jpg" alt="excellent" />
     <img src="nowkiss.jpg" alt="now kiss" />
+    <img src="flip.jpg" alt="flip" />
     <img src="fine.jpg" alt="This is fine" />
     <img src="fu.jpg" alt="FU cat" />
     <img src="c.jpg" alt="I'ts complicated" />
