--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
   <body>
     <img src="noidea.jpg" alt="noidea" />
+    <img src="bear1.jpg" alt="patient bear" />
+    <img src="bear2.jpg" alt="patient bear out of patient" />
     <img src="excelent.jpg" alt="excellent" />
     <img src="nowkiss.jpg" alt="now kiss" />
     <img src="flip.jpg" alt="flip" />
