--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <img src="noidea.jpg" alt="noidea" />
     <img src="bear1.jpg" alt="patient bear" />
     <img src="bear2.jpg" alt="patient bear out of patient" />
+    <img src="ok.jpg" alt="Saitama ok" />
     <img src="excelent.jpg" alt="excellent" />
     <img src="nowkiss.jpg" alt="now kiss" />
     <img src="flip.jpg" alt="flip" />
