--- a/index.html
+++ b/index.html
@@ -12,16 +12,18 @@
     <img src="ok.jpg" alt="Saitama ok" />
     <img src="excelent.jpg" alt="excellent" />
     <img src="nowkiss.jpg" alt="now kiss" />
+    <img src="facepalm.jpg" alt="facepalm" />
+    <img src="satisfaction.jpg" alt="satisfaction" />
     <img src="flip.jpg" alt="flip" />
     <img src="fine.jpg" alt="This is fine" />
     <img src="fu.jpg" alt="FU cat" />
+    <img src="fu2.jpg" alt="FUUUUUU" />
+    <img src="fu.gif" alt="fu fu fu fu fu ..." />
     <img src="c.jpg" alt="I'ts complicated" />
     <img src="nope.jpg" alt="nopezilla" />
     <img src="cookie.jpg" alt="cookie" />
     <img src="what.jpg" alt="What have I read" />
     <img src="lemon.jpg" alt="now kiss" />
-    <img src="facepalm.jpg" alt="facepalm" />
-    <img src="satisfaction.jpg" alt="satisfaction" />
     <img src="unit-test.jpg" alt="unit test" />
     <img src="cow-lick.jpg" alt="cow lick" />
     <img src="d.jpg" alt="Dangerouse dog" />
@@ -31,5 +33,6 @@
     <img src="take-my-money.gif" alt="Shut up and take my money" />
     <img src="told-ya.gif" alt="Told ya frozen" />
     <img src="rm.gif" alt="sudo rm" />
+    <img src="strategy.gif" alt="strategy cat" />
   </body>
 </html>
