--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   </head>
 
   <body>
+    <h2>Hosted</h2>
     <img src="noidea.jpg" alt="noidea" />
     <img src="bear1.jpg" alt="patient bear" />
     <img src="bear2.jpg" alt="patient bear out of patient" />
@@ -34,5 +35,8 @@
     <img src="told-ya.gif" alt="Told ya frozen" />
     <img src="rm.gif" alt="sudo rm" />
     <img src="strategy.gif" alt="strategy cat" />
+
+    <h2>3rd party</h2>
+    <img src="https://media.giphy.com/media/1Zbeweu52ZaQE/giphy.gif" alt="tumbleweed" />
   </body>
 </html>
