--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
   </head>
 
   <body>
+<textarea  rows="8" cols="200">
+
+  ¯\_(ツ)_/¯
+
+</textarea>
+
+
     <h2>Hosted</h2>
     <img src="noidea.jpg" alt="noidea" />
     <img src="bear1.jpg" alt="patient bear" />
