--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <img src="bear1.jpg" alt="patient bear" />
     <img src="bear2.jpg" alt="patient bear out of patient" />
     <img src="ok.jpg" alt="Saitama ok" />
+    <img src="https://imgflip.com/s/meme/Okay-Guy-Rage-Face.jpg" alt="ok meme" />
     <img src="excelent.jpg" alt="excellent" />
     <img src="nowkiss.jpg" alt="now kiss" />
     <img src="facepalm.jpg" alt="facepalm" />
