--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
 
     <h2>Hosted</h2>
+    <img src="slap.gif" alt="slap emoji" />
     <img src="noidea.jpg" alt="noidea" />
     <img src="bear1.jpg" alt="patient bear" />
     <img src="bear2.jpg" alt="patient bear out of patient" />
