--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <img src="d.jpg" alt="Dangerouse dog" />
     <img src="wot.png" alt="wooot" />
     <img src="price-of-speed.png" alt="Price of speed" />
-    <img src="merge.git" alt="git merge" />
+    <img src="merge.gif" alt="git merge" />
     <img src="take-my-money.gif" alt="Shut up and take my money" />
     <img src="told-ya.gif" alt="Told ya frozen" />
     <img src="rm.gif" alt="sudo rm" />
