--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <img src="fu.jpg" alt="FU cat" />
     <img src="fu2.jpg" alt="FUUUUUU" />
     <img src="fu.gif" alt="fu fu fu fu fu ..." />
+    <img src="coffee.gif" alt="coffee" />
     <img src="c.jpg" alt="I'ts complicated" />
     <img src="nope.jpg" alt="nopezilla" />
     <img src="cookie.jpg" alt="cookie" />
