--- a/index.html
+++ b/index.html
@@ -57,5 +57,6 @@
     <img src="https://i.imgflip.com/3bhw2u.jpg">
     <img src="https://media.giphy.com/media/VAJvLpyrgr3Og/giphy.gif" alt="wtf"/>
     <img src="https://preview.redd.it/4mrkpih7ok941.jpg?width=640&crop=smart&auto=webp&s=e5dce24afa463fb150c8a14f375870212ac7d24a" alt="meetings" />
+    <img src="https://media.giphy.com/media/e5PpBi9XlQn8A/giphy.gif" alt="join the party" />
   </body>
 </html>
