--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
     <h2>Hosted</h2>
+    <img src="cat.jpg" alt="wtf cat" />
     <img src="wtf.jpg" alt="wtf lama" />
     <img src="slap.gif" alt="slap emoji" />
     <img src="noidea.jpg" alt="noidea" />
