--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
     <img src="told-ya.gif" alt="Told ya frozen" />
     <img src="rm.gif" alt="sudo rm" />
     <img src="strategy.gif" alt="strategy cat" />
+    <img src="feature.jpg" alt="bugfeature" />
 
     <h2>3rd party</h2>
     <img src="https://media.giphy.com/media/1Zbeweu52ZaQE/giphy.gif" alt="tumbleweed" />
@@ -61,7 +62,6 @@
     <img src="https://media.giphy.com/media/VAJvLpyrgr3Og/giphy.gif" alt="wtf"/>
     <img src="https://preview.redd.it/4mrkpih7ok941.jpg?width=640&crop=smart&auto=webp&s=e5dce24afa463fb150c8a14f375870212ac7d24a" alt="meetings" />
     <img src="https://media.giphy.com/media/e5PpBi9XlQn8A/giphy.gif" alt="join the party" />
-    <img src="https://media.makeameme.org/created/its-not-a-5af2df.jpg" alt="bugfeature" />
 
 
     <a href="https://i.imgur.com/cWNo73N.mp4">Red Panda jump video</a>
