--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
     <img src="rm.gif" alt="sudo rm" />
     <img src="strategy.gif" alt="strategy cat" />
     <img src="feature.jpg" alt="bugfeature" />
+    <img src="come-on.jpg" alt="come on" />
 
     <h2>3rd party</h2>
     <img src="https://media.giphy.com/media/1Zbeweu52ZaQE/giphy.gif" alt="tumbleweed" />
