--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
     <img src="https://media.giphy.com/media/e5PpBi9XlQn8A/giphy.gif" alt="join the party" />
     <img src="https://media.giphy.com/media/xKy2w6LehxxHa/giphy.gif" alt="nod" />
     <img src="https://i.imgur.com/UZ0LF5R.gif" alt="really?" />
+    <img src="https://media.tenor.com/images/61277e504a36163efc660879be2eed79/tenor.gif" alt="I lied" />
 
 
     <a href="https://i.imgur.com/cWNo73N.mp4">Red Panda jump video</a>
