--- a/index.html
+++ b/index.html
@@ -56,6 +56,14 @@
     <img src="strategy.gif" alt="strategy cat" />
     <img src="feature.jpg" alt="bugfeature" />
     <img src="come-on.jpg" alt="come on" />
+    <img src="oh-yeah.gif" alt="oh yeah" />
+    <img src="panda.gif" alt="panda angry" />
+    <img src="hostgator.gif" alt="hostgator emo" />
+    <img src="zootopia-wtf.gif" alt="zootopa wtf" />
+    <img src="success.jpg" alt="success quotes" />
+    <img src="vim.jpg" alt="I use vim" />
+    <img src="trap.jpg" alt="it's a trap" />
+    <img src="rambo.webp" alt="rambo" />
 
     <h2>3rd party</h2>
     <img src="https://media.giphy.com/media/1Zbeweu52ZaQE/giphy.gif" alt="tumbleweed" />
