--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <img src="wtf.jpg" alt="wtf lama" />
     <img src="slap.gif" alt="slap emoji" />
     <img src="noidea.jpg" alt="noidea" />
+    <img src="good-idea.png" alt="such a good idea" />
     <img src="bear1.jpg" alt="patient bear" />
     <img src="bear2.jpg" alt="patient bear out of patient" />
     <img src="ok.jpg" alt="Saitama ok" />
