--- a/index.html
+++ b/index.html
@@ -17,8 +17,6 @@
 
   ¯\_(ツ)_/¯
 
-   ╭∩╮（︶︿︶）╭∩╮
-
    (－‸ლ)
 
 
@@ -57,12 +55,12 @@
     <img src="satisfaction.jpg" alt="satisfaction" />
     <img src="flip.jpg" alt="flip" />
     <img src="fine.jpg" alt="This is fine" />
-    <img src="fu.jpg" alt="FU cat" />
-    <img src="fu2.jpg" alt="FUUUUUU" />
-    <img src="fu.gif" alt="fu fu fu fu fu ..." />
+    <!-- <img src="fu.jpg" alt="FU cat" /> -->
+    <!-- <img src="fu2.jpg" alt="FUUUUUU" /> -->
+    <!-- <img src="fu.gif" alt="fu fu fu fu fu ..." /> -->
     <img src="coffee.gif" alt="coffee" />
     <img src="c.jpg" alt="I'ts complicated" />
-    <img src="nope.jpg" alt="nopezilla" />
+    <!-- <img src="nope.jpg" alt="nopezilla" /> -->
     <img src="what.jpg" alt="What have I read" />
     <img src="lemon.jpg" alt="now kiss" />
     <img src="unit-test.jpg" alt="unit test" />
