--- a/index.html
+++ b/index.html
@@ -83,6 +83,8 @@
     <img src="vim.jpg" alt="I use vim" />
     <img src="trap.jpg" alt="it's a trap" />
     <img src="rambo.webp" alt="rambo" />
+    <img src="fix.png" alt="fix computer" />
+
 
     <h2>3rd party</h2>
     <img src="https://media.giphy.com/media/1Zbeweu52ZaQE/giphy.gif" alt="tumbleweed" />
