--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
     <img src="https://media.giphy.com/media/xKy2w6LehxxHa/giphy.gif" alt="nod" />
     <img src="https://i.imgur.com/UZ0LF5R.gif" alt="really?" />
     <img src="https://media.tenor.com/images/61277e504a36163efc660879be2eed79/tenor.gif" alt="I lied" />
+    <img src="https://media1.giphy.com/media/3gNotAoIRZsb9UHPnj/giphy.gif?cid=6104955ejr0wnpi0gqm27wrdqtj46xcmqorut2x44pofam06&rid=giphy.gif&ct=g" alt="I lied" />
 
 
     <a href="https://i.imgur.com/cWNo73N.mp4">Red Panda jump video</a>
