--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 
     <h2>Hosted</h2>
     <img src="s.webp" alt="squirel" />
+    <img src="agree.png" alt="agree" />
     <img src="cat.jpg" alt="wtf cat" />
     <img src="wtf.jpg" alt="wtf lama" />
     <img src="slap.gif" alt="slap emoji" />
