--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 
     <h2>Hosted</h2>
     <img src="stg.jpeg" alt="staging in use">
+    <img src="hotwire.jpeg" alt="">
     <img src="s.webp" alt="squirel" />
     <img src="agree.png" alt="agree" />
     <img src="cat.jpg" alt="wtf cat" />
